--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 </form>
 
             </section>
-            <section class="appCards">
+            <ul class="cards">
+
+            </ul>
+            <!-- <section class="appCards">
                 <div class="cards card1">
                     <p>1</p>
                     <h2> </h2>
@@ -47,7 +50,7 @@
                 <div class="cards card6">
                     <p>6</p>
                 </div>
-            </section>
+            </section> -->
 
 
         </main>
