randomizing the array

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <section class="appInput">
                 <form>
                     <input class="user-input" type="text" placeholder="Type your guess">
+                    <input type="submit" name="Here's My Guess!"> 
                 </form>
 
             </section>
