--- a/index.html
+++ b/index.html
@@ -22,37 +22,19 @@
         </header>
         <main>
             <section class="appInput">
+                <!-- add label -->
                 <form>
                     <input class="user-input" type="text" placeholder="Type your guess">
-                    <input type="submit" name="Here's My Guess!"> 
+                    <button type="submit" class="submitButton">Here's My Guess!</button>
                 </form>
 
             </section>
+
+            <!-- this is where the cards go -->
+            <!-- lang attribute -->
             <ul class="cards">
 
             </ul>
-            <!-- <section class="appCards">
-                <div class="cards card1">
-                    <p>1</p>
-                    <h2> </h2>
-                </div>
-                <div class="cards card2">
-                    <p>2</p>
-                </div>
-                <div class="cards card3">
-                    <p>3</p>
-                </div>
-                <div class="cards card4">
-                    <p>4</p>
-                </div>
-                <div class="cards card5">
-                    <p>5</p>
-                </div>
-                <div class="cards card6">
-                    <p>6</p>
-                </div>
-            </section> -->
-
 
         </main>
 
