adding some styling

--- a/index.html
+++ b/index.html
@@ -6,23 +6,30 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>coffees + cultures</title>
+        <title>coffee culture</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
             integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans: 400,700|Rum+Raisin&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
             <div class="wrapper">
-                <h1>coffee culture</h1>
-                <p></p>
+                <div class="title">
+                    <h1><span>C</span>offee <span>C</span>ulture</h1>
+                    <p>Travelling the world? Learn how to order coffee like a local!</p>
+                </div>
                 <!-- <h1 class="appTitle">coffee + culture </h1> -->
+                <div class="instructions">
+                    <i class="far fa-question-circle"></i>
+                </div>
                 <div class="appInstructions">
-                    <p>1. Click a blank card to flip it over</p> 
-                    <p>2. Guess the English translation and type it into the box</p>
-                    <p>3. Get your match! </p>
+                    <ul>
+                        <li>Click a blank card to flip it over</li>
+                        <li>Guess the English translation and type your guess into the box</li>
+                    </ul>
                 </div>
             </div>  
             
