modal window works

--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
                     <p>Travelling the world? Learn how to order coffee like a local!</p>
                 </div>
                 <!-- <h1 class="appTitle">coffee + culture </h1> -->
-                <div class="instructions">
-                    <i class="far fa-question-circle"></i>
+                <div class="helpButton">
+                    <i class="far fa-question-circle help"></i>
                 </div>
-                <div class="appInstructions">
-                    <ul>
-                        <li>Click a blank card to flip it over</li>
-                        <li>Guess the English translation and type your guess into the box</li>
-                    </ul>
+                <div class="disableCards">
+                    <div class="modalOpen" id="modal1">
+                        <div class="appInstructions">
+                            <ul>
+                                <li><i class="fas fa-times closeModal"></i></li>
+                                <li>Click a blank card to flip it over</li>
+                                <li>Guess the English translation and type your guess into the box</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>  
             
