--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
             <div class="wrapper">
                 <div class="inputFlex">
                     <section class="appInput">
+                        <div class="editionInfo">
+                           <p>You're playing the German edition 🇩🇪 </p>
+                        </div>
                         <!-- add label -->
                         <form>
                             <input class="user-input" type="text" placeholder="Type your guess">
+                            <!-- add label -->
                             <button type="submit" class="submitButton">Here's My Guess!</button>
                         </form>
                         <div class="scoreCard">
@@ -58,9 +62,6 @@
                     </ul>
                 </div>
             </div>            
-
-            <!-- lang attribute -->
-            
 
         </main>
 
