--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <section class="appInput">
                     <section class="formFlex">
                         <div class="editionInfo">
-                            <p>You're playing the German edition 🇩🇪 </p>
+                            <p>You're playing the <span class="tagline"></span>German edition 🇩🇪 </p>
                         </div>
                         <!-- add label -->
                         <form>
