added reload button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                                 </li>
                                 <li>Click a blank card to flip it over</li>
                                 <li>Guess the English translation and type your guess into the box</li>
+                                <button type="reload" class="reloadModal">Let's start over</button>
                             </ul>
                         </div>
                     </div>
